--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,25 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.Mvvm_cathybk.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Mvvm_cathybk.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Mvvm_cathybk.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+    <!--Material Theme-->
+    <style name="Theme.Mvvm_cathybk.Material3.Light" parent="Theme.Material3.Light">
+<!--        <item name="android:windowSplashScreenBackground">#FFFFFF</item>-->
+<!--        <item name="android:windowSplashScreenIconBackgroundColor">-->
+<!--            #000000-->
+<!--        </item>-->
+<!--        <item name="android:windowSplashScreenAnimatedIcon">-->
+<!--            @mipmap/ic_travel_logo-->
+<!--        </item>-->
+    </style>
 </resources>
