--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,11 +20,15 @@
             />
 
     </com.google.android.material.appbar.AppBarLayout>
-
+    <app.rive.runtime.kotlin.RiveAnimationView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:riveResource="@raw/rating_animation"/>
     <FrameLayout
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
         />
